# QWP

./: .gitignore  LICENSE  README.md  pyproject.toml
QW+/: README.md  pyproject.toml
QW+/examples/: hello.qw  hello.qwstate  hello.teststate  hello.tuesday.qwstate
QW+/qw_plus.egg-info/: PKG-INFO  entry_points.txt
QW+/qwp/: __init__.py  __main__.py  butterfly.py  cli.py  gaslight.py  glyphs.py  lexer.py  loom.py  runtime.py
QW+/tests/: test_qwp.py
examples/: hello.qw  hello.qwpstate  hello.qwstate  hello.teststate  hello.tuesday.qwstate
qw_plus.egg-info/: PKG-INFO  SOURCES.txt
qwp/: __init__.py  __main__.py  butterfly.py  cli.py  gaslight.py  glyphs.py  lexer.py  loom.py  runtime.py
tests/: test_qwp.py
